Archive2/88/ff22d4ccb1b3fc/main.cpp
void f(int *) {}
void f(int []) {}

int main() {
  f(nullptr);
}
